Added array of topics

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </div>
     </div>
 
-    <script src="actions.js"></script>
+    <script type="text/javascript" src="actions.js"></script>
 </body>
 </html>
