--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="title">
+            <!-- <div class="title">
                 <h1>What should we talk about?</h1>
-            </div>
+            </div> -->
 
             <div class="topic">
-                <h2 class="topic-answer">Some subject here</h2>
+                <h2 class="topic-answer">What should we talk about?</h2>
             </div>
 
             <button class="submit-button">New Topic</button>
