Moved button outside of box, made style changes, added tc logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo"><img class="logo" src="img/tc-logo-black.svg" alt="the community"></div>
+
+
         <div class="card">
             <!-- <div class="title">
                 <h1>What should we talk about?</h1>
@@ -19,8 +22,9 @@
                 <h2 class="topic-answer">What should we talk about?</h2>
             </div>
 
-            <button class="submit-button">Pick a Topic</button>
         </div>
+
+        <button class="submit-button">Generate</button>
     </div>
 
     <script type="text/javascript" src="actions.js"></script>
